--- a/index.html
+++ b/index.html
@@ -3,17 +3,32 @@
 <head>
 	<title>Brian Duffy</title>
 
-	<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"> 
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
+	<!-- Stylesheets -->
 	<link href="css/site.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+	<!-- Hero Image Header -->
 	<header id="header">
+		<div class="header-side">
+			<i style="opacity: 0;" class="fas fa-4x fa-angle-double-right"></i>
+		</div>
 		<div id="header-center">
 			<h1>Brian Duffy</h1>
 			<p>Computer Science Engineering Student at The Ohio State University.</p>
 		</div>
+		<div class="header-side hover-point">
+			<i class="fas fa-4x fa-angle-double-right"></i>
+		</div>
 	</header>
-	<footer>
-	</footer>
+	<!-- /Hero Image Header -->
+
+	<!-- Main Site -->
+	<section>
+	</section>
+	<!-- /Main Site -->
 </body>
 </html>
