Start Resume Section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,33 @@
 	<!-- /Hero Image Header -->
 
 	<!-- Main Site -->
-	<section>
+	<section id="main-site">
+		<section class="content">
+			<h2 class="ta-c">Brian Duffy</h2>
+			<hr>
+
+			<h3>Education:</h3>
+			<h4>The Ohio State University</h4>
+			<h4>Solon High School</h4>
+			<h4>National Merit Commended Scholar</h4>
+
+			<h3>Work Experience:</h3>
+			<h4>Web Applicatioon Engineer</h4>
+			<h4>Senior Project</h4>
+
+			<h3>Volunteer Experience:</h3>
+			<h4>Youth Staff of Scouts BSA National Youth Leadership Training</h4>
+
+			<h3>Skills:</h3>
+			<h4>Computer Science</h4>
+			<h4>Leadership</h4>
+
+			<h3>Projects:</h3>
+			<h4>Healthry.org</h4>
+			<h4>6502 VM</h4>
+			<h4>Top-Down Shooter</h4>
+			<h4>BDSH</h4>
+		</section>
 	</section>
 	<!-- /Main Site -->
 </body>
