--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Brian Duffy</title>
+	<title>Brian Duffy, Developer</title>
 
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
@@ -10,7 +10,9 @@
 	<!-- Stylesheets -->
 	<link href="css/site.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
+<body id="cupid-shuffle">
+	<script type="text/javascript" src="js/slider.js"></script>
+
 	<!-- Hero Image Header -->
 	<header id="header">
 		<div class="header-side">
@@ -20,7 +22,7 @@
 			<h1>Brian Duffy</h1>
 			<p>Computer Science Engineering Student at The Ohio State University.</p>
 		</div>
-		<div class="header-side hover-point">
+		<div onclick="rightSlideClicked()" class="header-side hover-point">
 			<i class="fas fa-4x fa-angle-double-right"></i>
 		</div>
 	</header>
