--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 
 	<!-- Main Site -->
 	<section id="main-site">
+		<div onclick="leftSlideClicked()" id="content-side" class="hover-point">
+			<i class="fas fa-4x fa-angle-double-left"></i>
+		</div>
 		<section class="content">
 			<h2 class="ta-c">Brian Duffy</h2>
 			<hr>
@@ -56,6 +59,9 @@
 			<h4>Top-Down Shooter</h4>
 			<h4>BDSH</h4>
 		</section>
+		<div class="header-side hover-point">
+			<i style="opacity: 0;" class="fas fa-4x fa-angle-double-right"></i>
+		</div>
 	</section>
 	<!-- /Main Site -->
 </body>
