Finished Resume Portion

--- a/index.html
+++ b/index.html
@@ -35,29 +35,76 @@
 		</div>
 		<section class="content">
 			<h2 class="ta-c">Brian Duffy</h2>
+			
+			<p id="contact-links" class="ta-c">
+				<a href="mailto:duffy.348@osu.edu"><i class="fas fa-at"></i>duffy.348@osu.edu</a>
+				<a href="www.linkedin.com/in/brian-g-duffy/"><i class="fab fa-linkedin"></i>Brian Duffy</a>
+				<a href="github.com/19dufbri"><i class="fab fa-github"></i>19dufbri</a>
+			</p>
+
 			<hr>
 
 			<h3>Education:</h3>
-			<h4>The Ohio State University</h4>
-			<h4>Solon High School</h4>
-			<h4>National Merit Commended Scholar</h4>
+			<h4>The Ohio State University<small>, Columbus, Ohio</small></h4>
+			<ul>
+				<li>Expected Graduation with Honors Diploma in Computer Science Engineering: May 2023</li>
+				<li>Student in Fundamentals of Engineering Honors</li>
+			</ul>
+			<h4>Solon High School<small>, Solon Ohio: Graduated with Honors Diploma: May 2019</small></h4>
+			<h4>National Merit Commended Scholar<small>, 2018</small></h4>
 
 			<h3>Work Experience:</h3>
-			<h4>Web Applicatioon Engineer</h4>
-			<h4>Senior Project</h4>
+			<h4>Web Applicatioon Engineer<small>, Audio Odyssey, Inc. 2019-present</small></h4>
+			<ul>
+				<li>Used HTML, CSS, and JavaScript to develop a website that allowed authors to enter stories interactively</li>
+				<li>Designed a Python Flask backend allowing data to be accessed seamlessly through an app and website.</li>
+			</ul>
+			<h4>Senior Project<small>, General Electric, 2018</small></h4>
+			<ul>
+				<li>Shadowed software engineers working with Google Home and smart home technologies.</li>
+				<li>Wrote software in Golang to increase efficiency when testing smart lightbulbs remotely.</li>
+			</ul>
 
 			<h3>Volunteer Experience:</h3>
-			<h4>Youth Staff of Scouts BSA National Youth Leadership Training</h4>
+			<h4>Youth Staff of Scouts BSA National Youth Leadership Training<small>, 2018-present:</small></h4>
+			<ul>
+				<li>Taught leadership skills to young men and women including conflict resolution and communication.</li>
+				<li>Managed youth staff and ran logistics for the course.</li>
+				<li>Invited to speak at the 2019 Course Director’s Conference to share experiences.</li>
+			</ul>
 
 			<h3>Skills:</h3>
 			<h4>Computer Science</h4>
+			<ul>
+				<li>Taken courses in Java, C++, and Android App Development.</li>
+				<li>Proficient in multiple languages including HTML, CSS, Java, JavaScript, Python, Ruby, C/C++, Android App Development, and Shell.</li>
+				<li>Taught web development to students as part of the CodeSpace club for three years.</li>
+			</ul>
 			<h4>Leadership</h4>
+			<ul>
+				<li>Developed leadership skills through the National Youth Leadership Training, as a CodeSpace officer, youth leader of Scouts BSA troop, and as a band officer.</li>
+				<li>Trained in conflict resolution, presentation skills, and team development.</li>
+			</ul>
 
 			<h3>Projects:</h3>
-			<h4>Healthry.org</h4>
-			<h4>6502 VM</h4>
-			<h4>Top-Down Shooter</h4>
-			<h4>BDSH</h4>
+			<h4>Healthry.org<small>, 2019: Group Project</small></h4>
+			<ul>
+				<li>Constructed a web app to connect patients with healthcare providers.</li>
+				<li>Built using HTML, CSS, and Python Flask at Case Hackathon.</li>
+			</ul>
+			<h4>6502 VM<small>, 2019: Personal Project</small></h4>
+			<ul>
+				<li>Built fully functional emulation of the MOS 6502 CPU in the C language.</li>
+			</ul>
+			<h4>Top-Down Shooter<small>, 2018: Individual School Project</small></h4>
+			<ul>
+				<li>Used java Swing and OpenGL to develop top-down shooter in Java.</li>
+				<li>Built a feature-rich experience with simple AI enemies.</li>
+			</ul>
+			<h4>BDSH<small>, 2018: Personal Project</small></h4>
+			<ul>
+				<li>Built a fully functional shell in the C language.</li>
+			</ul>
 		</section>
 	</section>
 	<!-- /Main Site -->
