--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<h4>National Merit Commended Scholar<small>, 2018</small></h4>
 
 			<h3>Work Experience:</h3>
-			<h4>Web Applicatioon Engineer<small>, Audio Odyssey, Inc. 2019-present</small></h4>
+			<h4>Web Application Engineer<small>, Audio Odyssey, Inc. 2019-present</small></h4>
 			<ul>
 				<li>Used HTML, CSS, and JavaScript to develop a website that allowed authors to enter stories interactively</li>
 				<li>Designed a Python Flask backend allowing data to be accessed seamlessly through an app and website.</li>
