--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			
 			<p id="contact-links" class="ta-c">
 				<a href="mailto:duffy.348@osu.edu"><i class="fas fa-at"></i>duffy.348@osu.edu</a>
-				<a href="www.linkedin.com/in/brian-g-duffy/"><i class="fab fa-linkedin"></i>Brian Duffy</a>
-				<a href="github.com/19dufbri"><i class="fab fa-github"></i>19dufbri</a>
+				<a href="https://www.linkedin.com/in/brian-g-duffy/"><i class="fab fa-linkedin"></i>Brian Duffy</a>
+				<a href="https://github.com/19dufbri"><i class="fab fa-github"></i>19dufbri</a>
 			</p>
 
 			<hr>
