--- a/index.html
+++ b/index.html
@@ -46,39 +46,39 @@
 				<hr>
 
 				<h3>Education:</h3>
-				<h4>The Ohio State University<small>, Columbus, Ohio</small></h4>
+				<h4>The Ohio State University<span class="sub">, Columbus, Ohio&nbsp;&nbsp;<em><u>GPA (4.0 Scale): 3.98</u></em></span></h4>
 				<ul>
-					<li>Expected Graduation with Honors Diploma in Computer Science Engineering: May 2023</li>
-					<li>Student in Fundamentals of Engineering Honors</li>
+					<li>Honors B.S. Computer Science Engineering, May 2023.</li>
+					<li>Student in Fundamentals of Engineering Honors Program.</li>
 				</ul>
-				<h4>Solon High School<small>, Solon Ohio: Graduated with Honors Diploma: May 2019</small></h4>
-				<h4>National Merit Commended Scholar<small>, 2018</small></h4>
+				<h4>Solon High School<span class="sub">, Solon Ohio: Graduated with Honors Diploma: May 2019</span></h4>
+				<h4>National Merit Commended Scholar<span class="sub">, 2018</span></h4>
 
 				<h3>Work Experience:</h3>
-				<h4>Web Application Engineer<small>, Audio Odyssey, Inc. 2019-present</small></h4>
+				<h4>Web Application Engineer<span class="sub">, Audio Odyssey, Summer 2019</span></h4>
 				<ul>
-					<li>Used HTML, CSS, and JavaScript to develop a website that allowed authors to enter stories interactively</li>
-					<li>Designed a Python Flask backend allowing data to be accessed seamlessly through an app and website.</li>
+					<li>Developed a website using HTML, CSS, and JavaScript to allow authors to enter stories interactively.</li>
+					<li>Designed a Python Flask backend to allow data to be accessed through an app and website.</li>
 				</ul>
-				<h4>Senior Project<small>, General Electric, 2018</small></h4>
+				<h4>Shadowed Software Engineer<span class="sub">, General Electric, May 2018</span></h4>
 				<ul>
-					<li>Shadowed software engineers working with Google Home and smart home technologies.</li>
+					<li>Shadowed software engineers working with Google Home and smart home technologies. </li>
 					<li>Wrote software in Golang to increase efficiency when testing smart lightbulbs remotely.</li>
 				</ul>
 
 				<h3>Volunteer Experience:</h3>
-				<h4>Youth Staff of Scouts BSA National Youth Leadership Training<small>, 2018-present:</small></h4>
+				<h4>Youth Staff of Scouts BSA National Youth Leadership Training<span class="sub">, 2018-present:</span></h4>
 				<ul>
 					<li>Taught leadership skills to young men and women including conflict resolution and communication.</li>
 					<li>Managed youth staff and ran logistics for the course.</li>
-					<li>Invited to speak at the 2019 Course Director’s Conference to share experiences.</li>
+					<li><em><u>Invited to speak at the 2019 Course Director’s Conference</u></em> to share experiences.</li>
 				</ul>
 
-				<h3>Skills:</h3>
+				<h3>Skills and Experience:</h3>
 				<h4>Computer Science</h4>
 				<ul>
-					<li>Taken courses in Java, C++, and Android App Development.</li>
-					<li>Proficient in multiple languages including HTML, CSS, Java, JavaScript, Python, Ruby, C/C++, Android App Development, and Shell.</li>
+					<li>Completed courses in Java, C++, Algorithms, Software Development, and Android App Development.</li>
+					<li>Proficient in multiple languages including HTML, CSS, JavaScript, Java, Python, C/C++, and Shell.</li>
 					<li>Taught web development to students as part of the CodeSpace club for three years.</li>
 				</ul>
 				<h4>Leadership</h4>
@@ -88,28 +88,40 @@
 				</ul>
 
 				<h3>Projects:</h3>
-				<a href="https://healthry.org">
-					<h4>Healthry.org<small>, 2019: Group Project</small></h4>
+				<a href="https://github.com/kirkbrauer/FEHPacman">
+					<h4>FEHPacman<span class="sub">, 2019: Group Class Project</span></h4>
 					<ul>
-						<li>Constructed a web app to connect patients with healthcare providers.</li>
-						<li>Built using HTML, CSS, and Python Flask at Case Hackathon.</li>
+						<li>Planned and developed C++ based Pacman clone during a two-week final project.</li>
+						<li>Won awards for <em><u>Best Game</u></em> and <em><u>Best Documentation</u></em>.</li>
 					</ul>
 				</a>
-				<a href="https://github.com/19dufbri/6502vm">
-					<h4>6502 VM<small>, 2019: Personal Project</small></h4>
+				<a href="https://github.com/19dufbri/College-Cheque">
+					<h4>College-Cheque<span class="sub">, 2019: Group Project for 2019 HackOH/IO Hackathon</span></h4>
 					<ul>
-						<li>Built fully functional emulation of the MOS 6502 CPU in the C language.</li>
+						<li>Constructed web application comparison tool in Flask over a 24-hour coding competition.</li>
+						<li>Won <em><u>Best Financial Technology Award</u></em>.</li>
 					</ul>
 				</a>
-				<h4>Top-Down Shooter<small>, 2018: Individual School Project</small></h4>
+				<h4>Healthry.org<span class="sub">, 2019: Group Project for 2019 HackCWRU Hackathon</span></h4>
 				<ul>
-					<li>Used java Swing and OpenGL to develop top-down shooter in Java.</li>
-					<li>Built a feature-rich experience with simple AI enemies.</li>
+					<li>Constructed a web app to connect patients with healthcare providers.</li>
+					<li>Built using HTML, CSS, and Python Flask.</li>
+				</ul>
+				<a href="https://github.com/19dufbri/6502vm">
+					<h4>6502 Virtual Machine<span class="sub">, 2019: Personal Project</span></h4>
+					<ul>
+						<li>Produced fully functional emulation of the MOS 6502 CPU in the C language.</li>
+					</ul>
+				</a>
+				<h4>Top-Down Shooter<span class="sub">, 2018: Individual School Project</span></h4>
+				<ul>
+					<li>Used Java Swing and OpenGL to develop top-down shooter in Java.</li>
+					<li>Created a feature-rich experience with simple AI enemies.</li>
 				</ul>
 				<a href="https://github.com/19dufbri/bdsh">
-				<h4>BDSH<small>, 2018: Personal Project</small></h4>
+				<h4>Basic Shell<span class="sub">, 2018: Personal Project</span></h4>
 					<ul>
-						<li>Built a fully functional shell in the C language.</li>
+						<li>Developed a fully functional, <em>sh</em> like shell in the C language.</li>
 					</ul>
 				</a>
 			</section>
