--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- Stylesheets -->
 	<link href="css/site.css" rel="stylesheet" type="text/css" />
 </head>
-<body id="cupid-shuffle">
+<body id="cha-cha-slide">
 	<script type="text/javascript" src="js/slider.js"></script>
 
 	<!-- Hero Image Header -->
@@ -22,7 +22,7 @@
 			<h1>Brian Duffy</h1>
 			<p>Computer Science Engineering Student at The Ohio State University.</p>
 		</div>
-		<div onclick="rightSlideClicked()" class="header-side hover-point">
+		<div onclick="slideToTheRight()" class="header-side hover-point">
 			<i class="fas fa-4x fa-angle-double-right"></i>
 		</div>
 	</header>
@@ -30,7 +30,7 @@
 
 	<!-- Main Site -->
 	<section id="main-site">
-		<div onclick="leftSlideClicked()" id="content-side" class="hover-point">
+		<div onclick="slideToTheLeft()" id="content-side" class="hover-point">
 			<i class="fas fa-4x fa-angle-double-left"></i>
 		</div>
 		<section class="content">
