Added link to Healthry

--- a/index.html
+++ b/index.html
@@ -102,11 +102,13 @@
 						<li>Won <em><u>Best Financial Technology Award</u></em>.</li>
 					</ul>
 				</a>
-				<h4>Healthry.org<span class="sub">, 2019: Group Project for 2019 HackCWRU Hackathon</span></h4>
-				<ul>
-					<li>Constructed a web app to connect patients with healthcare providers.</li>
-					<li>Built using HTML, CSS, and Python Flask.</li>
-				</ul>
+				<a href="https://github.com/alanqchen/healthry">
+					<h4>Healthry.org<span class="sub">, 2019: Group Project for 2019 HackCWRU Hackathon</span></h4>
+					<ul>
+						<li>Constructed a web app to connect patients with healthcare providers.</li>
+						<li>Built using HTML, CSS, and Python Flask.</li>
+					</ul>
+				</a>
 				<a href="https://github.com/19dufbri/6502vm">
 					<h4>6502 Virtual Machine<span class="sub">, 2019: Personal Project</span></h4>
 					<ul>
@@ -119,7 +121,7 @@
 					<li>Created a feature-rich experience with simple AI enemies.</li>
 				</ul>
 				<a href="https://github.com/19dufbri/bdsh">
-				<h4>Basic Shell<span class="sub">, 2018: Personal Project</span></h4>
+					<h4>Basic Shell<span class="sub">, 2018: Personal Project</span></h4>
 					<ul>
 						<li>Developed a fully functional, <em>sh</em> like shell in the C language.</li>
 					</ul>
