--- a/pages/projects/fehrobot.html
+++ b/pages/projects/fehrobot.html
@@ -12,11 +12,11 @@
 	</head>
 	<body>
 		<header>
-			<h1><a href="#">Brian Duffy <small>Career Portfolio</small></a></h1>
+			<h1><a href="/">Brian Duffy <small>Career Portfolio</small></a></h1>
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="/">Home</a></li>
 				<li><a href="#">About</a></li>
-				<li><a href="#">Projects</a></li>
+				<li><a href="/pages/projects">Projects</a></li>
 				<li><a href="#">Resume</a></li>
 			</ul>
 		</header>
