Added inital pacman reference

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 	<script type="text/javascript" src="js/slider.js"></script>
 
 	<!-- Hero Image Header -->
-	<header id="header">
-		<div class="header-side">
-			<i style="opacity: 0;" class="fas fa-4x fa-angle-double-right"></i>
-		</div>
-		<div id="header-center">
-			<h1>Brian Duffy</h1>
-			<p>Computer Science Engineering Student at The Ohio State University.</p>
-		</div>
+	<header>
+		<h1><a href="/">Brian Duffy <small>Career Portfolio</small></a></h1>
+		<ul>
+			<li><a href="/">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="/pages/projects">Projects</a></li>
+			<li><a href="#">Resume</a></li>
+		</ul>
 	</header>
 	<!-- /Hero Image Header -->
 
