--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -49,6 +49,15 @@
 							</div>
 						</a>
 					</section>
+					<section>
+						<a href="pacman.html">
+							<div class="proj-pic" style="background-image: url('../../images/pacman-hero.png');"></div>
+							<div class="proj-desc">
+								<h3>Software Design Project - FEHPacman</h3>
+								<p>Generic description</p>
+							</div>
+						</a>
+					</section>
 				</section>
 			</section>
 		</section>
