Finished projects section

--- a/pages/projects/6502vm.html
+++ b/pages/projects/6502vm.html
@@ -29,8 +29,8 @@
 				<h2>6502 Virtual Machine</h2>
 				<hr />
 				<p>A topic fascinating to me for a number of years is the inner workings of computers, specifically how CPUs work on a circuit level. With this in mind, I began to explore the classic MOS 6502 processor that formed the backbone of many recognizable systems including many of the Commodore computers along with the NES by Nintendo. This exploration lead to the development of a full 6502 emulation suite written in C using no external libraries. This code was the largest project that I attempted at the time and during the process of writing it I gained a number of valuable skills including debugging, resource management, and version control systems. Coming out of the project I had much more experience using tools including Git, GCC, Valgrind, GDB, and Make.</p>
-				<p>The project is based on a single 6502vm struct that holds the current proccessor state. This design choice also allows multiple CPU emulations to be run in the same compilation unit without conflict. Currently the project only runs the provided test files, but in the future I would look forward to including more tests and incorperating the emulation into larger projects such as a NES emulator.</p>
-				<p>The link to the project page on Github: <a href="https://github.com/19dufbri/6502vm">https://github.com/19dufbri/6502vm</a></p>
+				<p>The project is based on a single 6502vm struct that holds the current processor state. This design choice also allows multiple CPU emulations to be run in the same compilation unit without conflict. Currently the project only runs the provided test files, but in the future I would look forward to including more tests and incorporating the emulation into larger projects such as a NES emulator.</p>
+				<p>The link to the project page on GitHub: <a href="https://github.com/19dufbri/6502vm">https://github.com/19dufbri/6502vm</a></p>
 			</section>
 		</section>
 	</body>
