--- a/pages/projects/fehrobot.html
+++ b/pages/projects/fehrobot.html
@@ -28,7 +28,7 @@
 				<br>
 				<h2>FEH Robot Design Project</h2>
 				<hr />
-				<p>The FEH robot project tasked members of the E6 team to design and build a fully functional robot for a comprehensive competition at the end of the semester. The team was given a list of design goals and was given time to come up with ideas and prototypes based on these inial contraints. During this project, I worked on prducing a full CAD model using the Solidworks design suite, tested and built a functioning prototype, and wrote and debugged C++ code used to autonimously control the robot. All of the work done on the project is compiled in a final report shown below.</p>
+				<p>The FEH robot project tasked members of the E6 team to design and build a fully functional robot for a comprehensive competition at the end of the semester. The team was given a list of design goals and was given time to come up with ideas and prototypes based on these initial constraints. During this project, I worked on producing a full CAD model using the Solidworks design suite, tested and built a functioning prototype, and wrote and debugged C++ code used to autonomously control the robot. All of the work done on the project is compiled in a final report shown below.</p>
 				<br />
 				<iframe class="document" src="../../documents/feh-robot-report.pdf"></iframe>
 			</section>
