--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -36,7 +36,7 @@
 							<div class="proj-pic" style="background-image: url('../../images/feh-robot-hero.jpg');"></div>
 							<div class="proj-desc">
 								<h3>FEH Robot</h3>
-								<p>Generic description</p>
+								<p>A fully functional autonomous robot tasked with navigating a course and competing in a competition. Modeled in Solidworks and programmed in C++ as part of the Fundamentals of Engineering Honors Robot Program.</p>
 							</div>
 						</a>
 					</section>
@@ -45,7 +45,7 @@
 							<div class="proj-pic" style="background-image: url('../../images/6502vm-hero.jpg');"></div>
 							<div class="proj-desc">
 								<h3>6502 Virtual Machine</h3>
-								<p>Generic description</p>
+								<p>Model of the commercially successful MOS 6502 CPU used in many home computing systems from the 70s and 80s. An exploration of emulation and computer internals in a fully custom C project.</p>
 							</div>
 						</a>
 					</section>
@@ -54,7 +54,7 @@
 							<div class="proj-pic" style="background-image: url('../../images/pacman-hero.png');"></div>
 							<div class="proj-desc">
 								<h3>Software Design Project - FEHPacman</h3>
-								<p>Generic description</p>
+								<p>A regimentation of the classic video game Pacman. Designed to work on the Proteus microcontoller board with a scoreboard and increasing difficulty. Written in C++ as a part of the Fundamentals of Engineering Honors program.</p>
 							</div>
 						</a>
 					</section>
