--- a/pages/projects/pacman.html
+++ b/pages/projects/pacman.html
@@ -28,6 +28,9 @@
 				<br>
 				<h2>Software Design Project - FEHPacman</h2>
 				<hr />
+				<p>As a part of the Fundamentals of Engineering Honors program at Ohio State, we were asked to develop a large software project on the Proteus micro-controller board. The project was to be a game written using C++ by a pair of programmers. I teamed up with Kirk Brauer to develop a new version of the classic game Pacman. The project gave me a lot of experience with embedded programming and gave me a necessary familiarity with the systems of the Proteus board that would later be used for the FEH robot project. The skills I gained during this project were collaboration, software design, and greater familiarity with tools such as VS Code, Qt Creator, Git, and GCC.</p>
+				<p>The project is based on a number of libraries that allow the main code of the project to remain simple yet running relatively fast on the limited Proteus platform. A struggle faced by the team when building the project was the limitations of the Proteus controller, namely a lack of a memory allocator on the system. This was overcome by statically allocating all memory and tightly reducing the amount of resources used by the program at any time. Another struggle that was overcome was the lack of drawing routines on the Proteus controller. The screen needed to be drawn pixel by pixel, significantly reducing performance without severe optimizations.</p>
+				<p>The link to the project page on GitHub: <a href="https://github.com/kirkbrauer/FEHPacman">https://github.com/kirkbrauer/FEHPacman</a></p>
 			</section>
 		</section>
 	</body>
