--- a/pages/resume.html
+++ b/pages/resume.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
 	<!-- Stylesheets -->
-	<link href="css/site.css" rel="stylesheet" type="text/css" />
+	<link href="../css/site.css" rel="stylesheet" type="text/css" />
+	<link href="../css/resume.css" rel="stylesheet" type="text/css" />
 </head>
 <body id="cha-cha-slide">
 	<script type="text/javascript" src="js/slider.js"></script>
@@ -30,6 +31,8 @@
 		<section class="content">
 			<section id="resume">
 				<h2 class="ta-c">Brian Duffy</h2>
+
+				<p class="ta-c"><a href="../documents/resume.pdf">Printable Version</a></p>
 				
 				<p id="contact-links" class="ta-c">
 					<a href="mailto:duffy.348@osu.edu"><i class="fas fa-at"></i> duffy.348@osu.edu</a>
