--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -17,7 +17,7 @@
 				<li><a href="/">Home</a></li>
 				<li><a href="#">About</a></li>
 				<li><a href="/pages/projects">Projects</a></li>
-				<li><a href="#">Resume</a></li>
+				<li><a href="/pages/resume.html">Resume</a></li>
 			</ul>
 		</header>
 
