--- a/pages/projects/pacman.html
+++ b/pages/projects/pacman.html
@@ -16,6 +16,7 @@
 			<ul>
 				<li><a href="/">Home</a></li>
 				<li><a href="#">About</a></li>
+				<li><a href="/pages/goals.html">Career Goals</a></li>
 				<li><a href="/pages/projects">Projects</a></li>
 				<li><a href="/pages/resume.html">Resume</a></li>
 			</ul>
