--- a/pages/goals.html
+++ b/pages/goals.html
@@ -29,7 +29,7 @@
 		<!-- Main Site -->
 		<section id="main-site">
 			<section class="content">
-				<section class="page-pic" style="background-image: url('../images/goals-hero.jpg');"></section>
+				<section class="page-pic" style="background-position: top; background-image: url('../images/goals-hero.jpg');"></section>
 				<br>
 				<img id="headshot" src="../images/headshot.jpg" />
 				<h2>Statement of Career Goals</h2>
