HTML Lang and attrib

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Brian Duffy, Developer</title>
 
@@ -85,7 +85,7 @@
 				</ul>
 
 				<h3>Projects:</h3>
-				<a href="https://github.com/kirkbrauer/FEHPacman">
+				<a href="https://github.com/kirkbrauer/FEHPacman"> 
 					<h4>FEHPacman<span class="sub">, 2019: Group Class Project</span></h4>
 					<ul>
 						<li>Planned and developed C++ based Pacman clone during a two-week final project.</li>
