--- a/pages/projects/6502vm.html
+++ b/pages/projects/6502vm.html
@@ -7,6 +7,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
+		<link rel="icon" type="image/png"  href="/images/favicon.png">
+
 		<!-- Stylesheets -->
 		<link href="../../css/site.css" rel="stylesheet" type="text/css" />
 	</head>
