--- a/pages/projects/pacman.html
+++ b/pages/projects/pacman.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Brian Duffy - 6502 VM</title>
+		<title>Brian Duffy - FEH Pacman</title>
 
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
+		<link rel="icon" type="image/png"  href="/images/favicon.png">
 
 		<!-- Stylesheets -->
 		<link href="../../css/site.css" rel="stylesheet" type="text/css" />
