--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
         </section>
     </section>
 
-    <script src="/js/bootstrap.bundle.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
