--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,8 @@
 
     <link href="/css/site.css" rel="stylesheet" />
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <nav class="navbar w-100 navbar-expand-lg navbar-dark bg-dark zi-1">
