Add webp support

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
                 interests me.</p>
             <h3 class="mt-4">Profile</h3>
             <hr>
-            <img class="w-100-ni w-md-33 ms-md-5 mb-3 float-md-end" src="/images/profile.jpg" />
+            <picture class="w-100-ni w-md-33 ms-md-5 mb-3 float-md-end">
+                <source type="image/webp" srcset="/images/profile.webp">
+                <img class="w-100" src="/images/profile.jpg" alt="Headshot of Brian Duffy">
+            </picture>
             <p>A senior in Computer Science & Engineering at <i>The</i> Ohio State University, I
                 have a range of experience and interests both technical and personal.</p>
             <p>I've always been fascinated by computers from the first computer games I played
