--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,10 @@
                     </div>
                 </div>
                 <div class="col-md-3 border-dark border-md-start border-1 border-opacity-25">
-                    <img src="/images/icon-website.jpg" class="img-fluid rounded-end">
+                    <picture class="img-fluid">
+                        <source type="image/webp" srcset="/images/icon-website.webp">
+                        <img class="w-100" src="/images/icon-website.jpg" alt="Screenshot of this Website">
+                    </picture>
                 </div>
             </div>
         </div>
@@ -65,7 +68,10 @@
                     </div>
                 </div>
                 <div class="col-md-3 border-dark border-md-start border-1 border-opacity-25">
-                    <img src="/images/icon-brisc8.jpg" class="img-fluid rounded-end">
+                    <picture class="img-fluid">
+                        <source type="image/webp" srcset="/images/icon-brisc8.webp">
+                        <img class="w-100" src="/images/icon-brisc8.jpg" alt="Screenshot of this Website">
+                    </picture>
                 </div>
             </div>
         </div>
@@ -79,7 +85,10 @@
                     </div>
                 </div>
                 <div class="col-md-3 border-dark border-md-start border-1 border-opacity-25">
-                    <img src="/images/icon-nlok.jpg" class="img-fluid rounded-end">
+                    <picture class="img-fluid">
+                        <source type="image/webp" srcset="/images/icon-nlok.webp">
+                        <img class="w-100" src="/images/icon-nlok.jpg" alt="Screenshot of this Website">
+                    </picture>
                 </div>
             </div>
         </div>
@@ -93,7 +102,10 @@
                     </div>
                 </div>
                 <div class="col-md-3 border-dark border-md-start border-1 border-opacity-25">
-                    <img src="/images/icon-feh.jpg" class="img-fluid rounded-end">
+                    <picture class="img-fluid">
+                        <source type="image/webp" srcset="/images/icon-feh.webp">
+                        <img class="w-100" src="/images/icon-feh.jpg" alt="Screenshot of this Website">
+                    </picture>
                 </div>
             </div>
         </div>
