Attempt lazy load

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <hr>
             <picture class="w-100-ni w-md-33 ms-md-5 mb-3 float-md-end">
                 <source type="image/webp" srcset="/images/profile.webp">
-                <img class="w-100" src="/images/profile.jpg" alt="Headshot of Brian Duffy">
+                <img loading="lazy" class="w-100" src="/images/profile.jpg" alt="Headshot of Brian Duffy">
             </picture>
             <p>A senior in Computer Science & Engineering at <i>The</i> Ohio State University, I
                 have a range of experience and interests both technical and personal.</p>
