--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
                 <div class="col-md-3 border-dark border-md-start border-1 border-opacity-25">
                     <picture class="img-fluid">
                         <source type="image/webp" srcset="/images/icon-website.webp">
-                        <img class="w-100" src="/images/icon-website.jpg" alt="Screenshot of this Website">
+                        <img loading="lazy" class="w-100" src="/images/icon-website.jpg" alt="Screenshot of this Website">
                     </picture>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 <div class="col-md-3 border-dark border-md-start border-1 border-opacity-25">
                     <picture class="img-fluid">
                         <source type="image/webp" srcset="/images/icon-brisc8.webp">
-                        <img class="w-100" src="/images/icon-brisc8.jpg" alt="Screenshot of this Website">
+                        <img loading="lazy" class="w-100" src="/images/icon-brisc8.jpg" alt="Screenshot of this Website">
                     </picture>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <div class="col-md-3 border-dark border-md-start border-1 border-opacity-25">
                     <picture class="img-fluid">
                         <source type="image/webp" srcset="/images/icon-nlok.webp">
-                        <img class="w-100" src="/images/icon-nlok.jpg" alt="Screenshot of this Website">
+                        <img loading="lazy" class="w-100" src="/images/icon-nlok.jpg" alt="Screenshot of this Website">
                     </picture>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                 <div class="col-md-3 border-dark border-md-start border-1 border-opacity-25">
                     <picture class="img-fluid">
                         <source type="image/webp" srcset="/images/icon-feh.webp">
-                        <img class="w-100" src="/images/icon-feh.jpg" alt="Screenshot of this Website">
+                        <img loading="lazy" class="w-100" src="/images/icon-feh.jpg" alt="Screenshot of this Website">
                     </picture>
                 </div>
             </div>
