--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="/css/site.css" rel="stylesheet" />
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
 
+    <link href="https://fonts.googleapis.com/" rel=preconnect>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
