--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,8 @@
     <link href="/css/resume.css" rel="stylesheet" />
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
 
+    <link href="https://fonts.googleapis.com/" rel=preconnect>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
