--- a/index.html
+++ b/index.html
@@ -96,5 +96,6 @@
     </section>
 
     <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/webpdetect.min.js"></script>
 </body>
 </html>
