--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
         </section>
     </section>
 
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script async src="/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
