--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
 <head>
     <meta charset="UTF-8">
-    <title>Brian Duffy</title>
+    <title>Brian Duffy - Home</title>
 
     <link href="/css/site.css" rel="stylesheet" />
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/" rel=preconnect>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Student, Developer, Rower - Brian Duffy's
+        Personal Website and Career Portfolio.">
 </head>
 <body>
     <script async src="/js/webpdetect.min.js"></script>
