--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/" rel=preconnect>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Completed projects by Brian Duffy,
+        including personal and professional work samples.">
 </head>
 <body>
     <nav class="navbar w-100 navbar-expand-lg navbar-dark bg-dark zi-1">
