--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/" rel=preconnect>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Online version of Brian Duffy's
+        professional resume. Includes contact information.">
 </head>
 <body>
     <nav class="navbar w-100 navbar-expand-lg navbar-dark bg-dark zi-1">
