--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link href="https://fonts.googleapis.com/" rel=preconnect>
 
+    <link rel="icon" type="image/png"  href="/images/favicon.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Student, Developer, Rower - Brian Duffy's
         Personal Website and Career Portfolio.">
