--- a/resume.html
+++ b/resume.html
@@ -10,6 +10,8 @@
 
     <link href="https://fonts.googleapis.com/" rel=preconnect>
 
+    <link rel="icon" type="image/png"  href="/images/favicon.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Online version of Brian Duffy's
         professional resume. Includes contact information.">
