--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,8 @@
 
     <link href="https://fonts.googleapis.com/" rel=preconnect>
 
+    <link rel="icon" type="image/png"  href="/images/favicon.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Completed projects by Brian Duffy,
         including personal and professional work samples.">
