Content links and etc
aria-labels and bg-load

--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,11 @@
         including personal and professional work samples.">
 </head>
 <body>
+    <script async src="/js/webpdetect.min.js"></script>
+    <script>
+        document.documentElement.classList.remove("no-js");
+    </script>
+
     <nav class="navbar w-100 navbar-expand-lg navbar-dark bg-dark zi-1">
         <div class="container-fluid mx-md-5">
             <div class="flex-grow-1 d-none d-lg-block flex-basis-lg-1"></div>
