--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p>Student, Developer, Rower</p>
             </section>
             <div class="position-absolute w-100 h-100 d-flex">
-                <a class="mt-auto mb-3 mx-auto text-white text-decoration-none" href="#site-background">
+                <a aria-label="Scroll Down the Page" class="mt-auto mb-3 mx-auto text-white text-decoration-none" href="#site-background">
                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-chevron-double-down" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
                         <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
